--- a/templates/Notes/addNotesInstitute.html
+++ b/templates/Notes/addNotesInstitute.html
@@ -357,6 +357,10 @@
                         <div class="col-lg-12 col-md-12  col-12 d-flex justify-content-end">
                             <button class="btn btn-info btn-md" type="button" onclick="duplicate(this)">Add File</button>
                         </div>
+                        <div class="col-md-6 col-lg-5 col-12 input-group form-group">
+                            <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Price</label>
+                            <input type="text" class="form-control" name='price' required placeholder="0" >
+                        </div>
                         <div class="col-md-12 col-lg-12 col-12 input-group form-group">
                             <textarea type="text" class="form-control my-2 w-100" name='description'
                                 placeholder="Note Description"></textarea>
