--- a/templates/Notes/addNotesTutor.html
+++ b/templates/Notes/addNotesTutor.html
@@ -54,7 +54,18 @@
                             <label class="custom-file-label" >Choose file...</label>
                             </div>
                         </div>
-
+                        <div class="col-lg-4 col-md-6 col-12 input-group form-group">
+                            <label class="control-label col-sm-4 col-5 mt-2"
+                                style="color: black;">Class</label>
+                            <input type="text" step="0.01" class="form-control w-100 col-sm-8 col-7"
+                                id="class" name="forclass" placeholder="class" required>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-12 input-group form-group">
+                            <label class="control-label col-sm-4 col-5 mt-2"
+                                style="color: black;">Price</label>
+                            <input type="text" step="0.01" class="form-control w-100 col-sm-8 col-7"
+                                id="price" name="price" placeholder="0" required>
+                        </div>
                         <div class="col-lg-12 col-md-12  col-12 d-flex justify-content-end">
                             <button class="btn btn-info btn-md" type="button" onclick="duplicate(this)">Add File</button>
                         </div>
