--- a/static/assets/css/apps/mailing-chat.css
+++ b/static/assets/css/apps/mailing-chat.css
@@ -328,7 +328,7 @@
 .mail-chat-system .chat-messages .message.right .text {
     margin-right: 38px;
     background-color: #c2d5ff;
-    color: #1a73e9;
+    color: #816cfd;;
     border-radius: 1.875rem !important;
     border-top-right-radius: 0px !important;
     padding: 12px;
