--- a/templates/Exam/addQuestionsTutor.html
+++ b/templates/Exam/addQuestionsTutor.html
@@ -24,15 +24,16 @@
   </div>
   {% endif %}
   <div>
-    <div class="col-xl-12 col-md-12 col-12 mt-5">
-            <div class="card statbox widget box box-shadow">
-                <div class="card-header">
-                    <div class="row">
-                        <div class="col-xl-12 col-md-12 col-12">
-                            <h2 style="color:black;">List of Exams</h2>
+      <div class="col-xl-12 col-md-12 col-12 mt-5">
+          <div class="card statbox widget box box-shadow">
+              <div class="card-header">
+                  <div class="row">
+                      <div class="col-xl-12 col-md-12 col-12">
+                          <h2 style="color:black;">List of Exams</h2>
                         </div>
                     </div>
                 </div>
+                {% if exams or tutorexams %}
                 <div class="widget-content widget-content-area">
                     <div class="table-responsive">
                     {% if exams %}
@@ -111,8 +112,18 @@
                         </form>{% endif %}
                     </div>
                 </div>
+                {% else %}
+        <div class="card-header" style="background: none;">
+            <div class="row">
+                <div class="col-xl-12 col-md-12 col-12">
+                    <h2>No Exams to show</h2>
+                </div>
             </div>
         </div>
+    {% endif %}
+            </div>
+        </div>
+        
 </div>
 </div>
 {% endblock main-content %}
