--- a/templates/Results/annotation.html
+++ b/templates/Results/annotation.html
@@ -1,4 +1,4 @@
-{% extends 'dashboard/base.html' %} 
+{% extends template %} 
 {% load static %}
 
 {% block main-content %}
@@ -34,6 +34,5 @@
   $('.fixed-sidebar').toggleClass('closed-sidebar');
 
   </script>
-
 
 {% endblock %}
