--- a/templates/students/archiveStudentList.html
+++ b/templates/students/archiveStudentList.html
@@ -235,6 +235,7 @@
                         <!-- Grid column -->
                     </div>
                 </div>
+                {% if students %}
                     <div class="card-body">
                     <!-- Grid row -->
                     <form action=" " method="post">{% csrf_token %}
@@ -274,6 +275,15 @@
                         <br>
                     </form>
                 </div>
+                {% else %}
+                    <div class="card-header" style="background: none;">
+                        <div class="row">
+                            <div class="col-xl-12 col-md-12 col-12">
+                                <h2>No Students to show</h2>
+                            </div>
+                        </div>
+                    </div>
+                {% endif %}
             </div>
     </main>
     {% endblock %}
