--- a/templates/students/viewStudents.html
+++ b/templates/students/viewStudents.html
@@ -28,6 +28,7 @@
             </div>
                 <!-- Grid column -->
             </div>
+            {% if students %}
             <div class="card-body">
                 <!-- Grid row -->
                 <div style="overflow-x:scroll;">
@@ -84,6 +85,15 @@
                 </div>
                 <br>
             </div>
+            {% else %}
+                    <div class="card-header" style="background: none;">
+                        <div class="row">
+                            <div class="col-xl-12 col-md-12 col-12">
+                                <h2>No Students to show</h2>
+                            </div>
+                        </div>
+                    </div>
+                {% endif %}
         </div>
 </main>
 <script type="text/javascript">
