--- a/templates/teacher/viewTutors.html
+++ b/templates/teacher/viewTutors.html
@@ -240,6 +240,7 @@ width: 35%;
                   </div>
                 <!-- Grid column -->
             </div>
+            {% if tutors %}
             <div class="card-body">
                 <!-- Grid row -->
                 <!-- Grid row -->
@@ -304,6 +305,15 @@ width: 35%;
                         <br>
                     </form>
             </div>
+            {% else %}
+                    <div class="card-header" style="background: none;">
+                        <div class="row">
+                            <div class="col-xl-12 col-md-12 col-12">
+                                <h2>No Tutors to show</h2>
+                            </div>
+                        </div>
+                    </div>
+                {% endif %}
         </div>
 </main>
 <script type="text/javascript">
