--- a/templates/tutorials/ArchievedTutorialsTutor.html
+++ b/templates/tutorials/ArchievedTutorialsTutor.html
@@ -12,6 +12,7 @@
                     </div>
                 </div>
             </div>
+            {% if tutorials %}
             <div class="card-body">
                 <form action="" method="post">{% csrf_token %}
                     <div id='mainForm' class="table-responsive">
@@ -59,6 +60,15 @@
                 </form>
                 <br>
             </div>
+            {% else %}
+                    <div class="card-header" style="background: none;">
+                        <div class="row">
+                            <div class="col-xl-12 col-md-12 col-12">
+                                <h2>No Tutorials to show</h2>
+                            </div>
+                        </div>
+                    </div>
+                {% endif %}
         </div>
     </main>
     {% endblock main-content %}
