--- a/templates/Exam/editExamQuestionsTutor.html
+++ b/templates/Exam/editExamQuestionsTutor.html
@@ -23,6 +23,7 @@
                         </div>
                     </div>
                 </div>
+                {% if exams or tutorexams %}
                 <div class="widget-content widget-content-area">
                     <div class="table-responsive">
                     {% if exams %}
@@ -117,6 +118,15 @@
                         </form>{% endif %}
                     </div>
                 </div>
+                {% else %}
+        <div class="card-header" style="background: none;">
+            <div class="row">
+                <div class="col-xl-12 col-md-12 col-12">
+                    <h2>No Exams to show</h2>
+                </div>
+            </div>
+        </div>
+    {% endif %}
             </div>
         </div>
 </main>
