--- a/templates/Notes/addNotesInstitute.html
+++ b/templates/Notes/addNotesInstitute.html
@@ -304,7 +304,7 @@
 
 {% endblock %}
 {% block main-content %}
-<div class="mt-5">
+<div class="mt-5 row">
     <div class="d-flex justify-content-center h-100">
         <div class="card" style="width: 100%;">
             <div class="card-header">
