--- a/templates/Results/ResultInstitute.html
+++ b/templates/Results/ResultInstitute.html
@@ -229,6 +229,7 @@
                 </div>
                 <!-- Grid column -->
             </div>
+            {% if exams %}
             <div class="card-body">
                 <!-- Grid row -->
                 <form action="" method="post">{% csrf_token %}
@@ -265,6 +266,15 @@
                 </form>
                 <br>
             </div>
+            {% else %}
+                <div class="card-header" style="background: none;">
+                    <div class="row">
+                        <div class="col-xl-12 col-md-12 col-12">
+                            <h2>No Exams to show</h2>
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
         </div>
     </main>
     <script type="text/javascript">
