--- a/templates/Results/ResultTeacher.html
+++ b/templates/Results/ResultTeacher.html
@@ -268,6 +268,7 @@
                 </div>
                 <!-- Grid column -->
             </div>
+            {% if exams or tutorexams %}
             <div class="card-body">
                 <!-- Grid row -->
 
@@ -354,6 +355,15 @@
                 {% endif %}
                 <br>
             </div>
+            {% else %}
+                <div class="card-header" style="background: none;">
+                    <div class="row">
+                        <div class="col-xl-12 col-md-12 col-12">
+                            <h2>No Exams to show</h2>
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
         </div>
 </main>
 <script type="text/javascript">
