--- a/templates/Results/Review_Answer.html
+++ b/templates/Results/Review_Answer.html
@@ -1,4 +1,4 @@
-{% extends 'dashboard/base.html' %}
+{% extends template %}
 {% load static %}
 {% block main-content %}
 <div class="card mt-5" style="color: black;">
