--- a/templates/Results/examResultsAll.html
+++ b/templates/Results/examResultsAll.html
@@ -11,6 +11,7 @@
                         </div>
                     </div>
                 </div>
+                {% if results or tutorresults %}
                 {% if results %}
                 <div class="mt-2 col-lg-12 col-sm-12 mb-3">
                     <label class="form-check-label" for="defaultCheck1">
@@ -93,6 +94,15 @@
                         </div>
                     </div>
                     {% endif %}
+                    {% else %}
+                    <div class="card-header" style="background: none;">
+                        <div class="row">
+                            <div class="col-xl-12 col-md-12 col-12">
+                                <h2>No Results to show</h2>
+                            </div>
+                        </div>
+                    </div>
+                {% endif %}
             </div>
     </main>
     <script type="text/javascript">
