--- a/templates/students/enrolledStudents.html
+++ b/templates/students/enrolledStudents.html
@@ -388,7 +388,7 @@
       </div>
     {% endfor %}
     {% else %}
-    <div class="card w-100 h-25 m-0">
+    <div class="card w-100 h-25 mx-3">
       <h5 class="mt-2 mb-2 p-2">No Data Found</h5>
     </div>
     {% endif %}
