--- a/static/assets/css/apps/mailing-chat.css
+++ b/static/assets/css/apps/mailing-chat.css
@@ -332,20 +332,21 @@
     border-radius: 1.875rem !important;
     border-top-right-radius: 0px !important;
     padding: 12px;
-    margin-top: 16px;
+    margin-top: 65px;
+    margin-bottom: 65px;
     box-shadow: 0px 0px 15px 1px rgba(113, 106, 202, 0.2);
 }
 .mail-chat-system .chat-messages .message.right .avatar {
     position: absolute;
-    float: right;
+    top: -50px;
+    right: 12px;
+    border-radius: 50%;
     background-image: url(../../../assets/img/90x90.jpg);
+    float: right;
     background-repeat: no-repeat;
     background-size: cover;
-    right: 22px;
-    top: -50px;
     height: 44px;
     width: 44px;
-    border-radius: 50%;
 }
 .mail-chat-system .chat-bottom-section {
     width: 100%;
