--- a/templates/Institute/institutecalendar.html
+++ b/templates/Institute/institutecalendar.html
@@ -35,21 +35,21 @@
     </div>
     <form id="frm" class="mb-4 mt-4" method="post" action="{% url 'dateandbatch' %}">{% csrf_token %}
 
-      <div class="container" id="card">
+      <!-- <div class="container" id="card">
         <div class="row d-flex justify-content-center">
           <div class="col">
             <div class="col" id='mydiv' name="selectdate"></div>
           </div>
         </div>
-      </div>
+      </div> -->
 
 
-      <!-- <div class="mx-2 row" id="INSTBATCH">
+      <div class="mx-2 row" id="INSTBATCH">
         <div class="col text-center">
           <label for="validationCustom01"><strong>Date </strong></label>
           <input type="" name="selectdate" id="mydiv">
         </div>
-      </div> -->
+      </div>
 
 
       <br>
