--- a/templates/Institute/instCalendar.html
+++ b/templates/Institute/instCalendar.html
@@ -1,13 +1,44 @@
+Skip to content
+Search or jump to…
+
+Pull requests
+Issues
+Marketplace
+Explore
+
+@Rakesh10021997
+Yashkulkarni205
+/
+JDMR
+Private
+2
+01
+Code
+Issues
+Pull requests
+1
+Actions
+Projects
+Security
+Insights
+JDMR/templates/Institute/instCalendar.html
+@Rakesh10021997
+Rakesh10021997 course
+Latest commit 2e4810d 7 days ago
+History
+1 contributor
+58 lines (51 sloc) 1.65 KB
+
 {% extends template %}
 {% load static %}
 
 {% block main-content %}
 <style>
-    #card{
-        background-color:white;
-        padding-bottom:3rem;
-        padding-top:3rem;
-        color:black;
+    #card {
+        background-color: white;
+        padding-bottom: 3rem;
+        padding-top: 3rem;
+        color: black;
     }
 </style>
 <div class="container mt-4">
@@ -15,7 +46,9 @@
     <div class="alert alert-danger" role="alert">
         <div id='errorsBox'>
             <div>
-                <h5 style="color: red;text-shadow:-0.5px -0.5px 0 #000,0.5px -0.5px 0 #000,-0.5px 0.5px 0 #000,0.5px 0.5px 0 #000;">Error !</h5>
+                <h5
+                    style="color: red;text-shadow:-0.5px -0.5px 0 #000,0.5px -0.5px 0 #000,-0.5px 0.5px 0 #000,0.5px 0.5px 0 #000;">
+                    Error !</h5>
                 <ul>
                     {% for x in errors %}
                     <li>{{ x }}</li>
@@ -24,7 +57,7 @@
             </div>
         </div>
     </div>
-        {% endif %}
+    {% endif %}
 
     <link href='https://cdn.jsdelivr.net/npm/fullcalendar@5.0.0/main.min.css' rel='stylesheet' />
     <script src='https://cdn.jsdelivr.net/npm/fullcalendar@5.0.0/main.min.js'></script>
@@ -39,19 +72,33 @@
 
     <script>
 
-      document.addEventListener('DOMContentLoaded', function() {
-        var calendarEl = document.getElementById('calendar');
-        var calendar = new FullCalendar.Calendar(calendarEl, {
-          initialView: 'dayGridMonth',
-          headerToolbar: {
-                          left: 'prev,next today',
-                          center: 'title',
-                          right: 'dayGridMonth,timeGridWeek,timeGridDay'
-                        },
+        document.addEventListener('DOMContentLoaded', function () {
+            var calendarEl = document.getElementById('calendar');
+            var calendar = new FullCalendar.Calendar(calendarEl, {
+                initialView: 'dayGridMonth',
+                headerToolbar: {
+                    left: 'prev,next today',
+                    center: 'title',
+                    right: 'dayGridMonth,timeGridWeek,timeGridDay'
+                },
+                events: [
+
+                    {% for event in events %}
+
+                        {
+                    title: "{{ event.batchName}}",
+                    start: '{{ event.createdAt|date:"Y-m-d" }}',
+                    // start: '{{ event.startTime|time:"H:i" }}',
+                    end: '{{ event.endTime|time:"H:i" }}',
+                    id: '{{ event.id }}',
+                },
+                {% endfor %}
+                ],
+                
         });
         calendar.render();
       });
-    
+
     </script>
 
 </div>
