--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -1,13 +1,3 @@
-Skip to content
-Search or jump to…
-
-Pull requests
-Issues
-Marketplace
-Explore
- 
-@Rakesh10021997 
-
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -265,21 +255,21 @@ Explore
               <a href="{% url 'instCalendar' %}">
                 <div class="">
                   <img src="{% static 'assets/img/card-outline.png' %}" alt="">
-                  <span>Calender modify</span>
+                  <span>Calender</span>
                 </div>
               </a>
             </li>
 
            
 
-            <li class="menu">
+            <!-- <li class="menu">
               <a href="{% url 'institutecalendar' %}">
                 <div class="">
                   <img src="{% static 'assets/img/card-outline.png' %}" alt="">
                   <span>Calender</span>
                 </div>
               </a>
-            </li>
+            </li> -->
             
 
             <li class="menu">
