--- a/templates/chat/room2.html
+++ b/templates/chat/room2.html
@@ -6,7 +6,15 @@
 {% endblock extra-stylesheets %}
 <!-- END PAGE LEVEL STYLES -->
 {% block main-content %}
-<center>
+<style>
+    .hi-button{
+        position: absolute;
+        top: 30%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+    }
+</style>
+<!-- <center> -->
     <div class="chat-section layout-spacing">
         <div class="card mt-5">
             <div class="card-body">
@@ -49,7 +57,7 @@
 
                                 {% if a %}
 
-                                <ul class="chat-messages pl-0" style="padding-top:34px;">
+                                <ul class="chat-messages pl-0 pt-0">
                                     {% for i,photo in a %}
 
                                     {% if i.chatroom == case1 or i.chatroom == case2 %}
@@ -58,29 +66,17 @@
                                     <div class="message left appeared">
                                         <div class="avatar" style="background-image: url({{photo.url}});"></div>
                                         <div class="text_wrapper">
-                                            <div class="text">{{ i.message }}</div>
+                                            <div class="text pb-1">{{ i.message }}<div class="text-right mr-2" style="font-size: 9px;">{{i.dtime|date:"M d, Y H:m"}}</div></div>
                                         </div>
                                     </div>
-                                    <!-- <div id="boxedr" >
-                <h3>{{ i.message }}</h3>
-                <h10>{{ i.dtime }}</h10><br>
-                From:{{ i.ts }}
-            </div>
-            <br> -->
+    
                                     {% else %}
                                     <div class="message right appeared">
                                         <div class="avatar" style="background-image: url({{photo.url}});"></div>
                                         <div class="text_wrapper">
-                                            <div class="text">{{ i.message }}</div>
+                                            <div class="text pb-1">{{ i.message }}<div class="text-right mr-2" style="font-size: 9px;">{{i.dtime|date:"M d, Y H:m"}}</div></div>
                                         </div>
                                     </div>
-                                    <!-- <div id="boxeds" >
-                <h3>{{ i.message }}</h3>
-                <h10>{{ i.dtime }}</h10><br>
-                From:{{ i.ts }}
-            </div>
-            <br> -->
-
                                     {% endif %}
 
                                     {% endif %}
@@ -91,7 +87,7 @@
                                 {% endif %}
 
                                 <div class="chat-bottom-section clearfix">
-                                    <form action="chatsend" method="post">
+                                    <form class="chat-form" action="chatsend" method="post">
                                         {% csrf_token %}
                                         <div class="input-group mb-3 message_input_wrapper">
                                             <div class="input-group-prepend">
@@ -123,7 +119,7 @@
     <input type="file"  name="myfile" enctype="multipart/form-data">
     <input type="submit" value="Send" name="room">
     </form> -->
-    </div>
+    <div>
     {{ room_name|json_script:"room-name" }}
     </div>
     <!-- <script>
@@ -163,37 +159,11 @@
         };
     </script> -->
 
-    <script>
-        $(document).ready(function () {
-            App.init();
-        });
-    </script>
-    <script src="{% static 'assets/js/custom.js' %}"></script>
-    <!-- END GLOBAL MANDATORY SCRIPTS -->
     <!-- BEGIN PAGE LEVEL PLUGINS/CUSTOM SCRIPTS -->
     <script src="{% static 'assets/js/apps/custom-mailbox.js' %}"></script>
     <script src="{% static 'assets/js/apps/mailbox-chat.js' %}"></script>
-
-    <script>
-        function load_home() {
-            document.getElementById("footer1").innerHTML = '<object type="text/html" data="home.html" ></object>';
-        }
-    </script>
-
-    <script>
-        function load_home() {
-            document.getElementById("footer1").innerHTML = '<object type="text/html" data="home.html" ></object>';
-        }
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
-        integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
-        integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG"
-        crossorigin="anonymous"></script>
-</center>
-
-<script type="text/javascript">
+        
+    <script type="text/javascript">
     trlist = $(".lis");
     $("body").on('input',"#searchbox",function(){
         trlist.hide();
@@ -210,7 +180,20 @@
                 console.log(trlist[i])
             }
         }
-
+        
     });
+
+    $(document).ready(()=>{
+        if($('.chat-messages').children().length<=0){
+            $('.chat-messages').append(`<button class="btn btn-success hi-button" onclick="hi()">Say "Hi"</button>`)
+        }
+    });
+
+    function hi() {
+        $('.message_input').val('Hi');
+        $('.chat-form').submit();
+    }
+
 </script>
+<!-- </center> -->
 {% endblock %}
