--- a/templates/tutorials/addTutorialsInstitute.html
+++ b/templates/tutorials/addTutorialsInstitute.html
@@ -353,7 +353,7 @@ width:max-content;
 
                     <div class="col-md-6 col-lg-4 col-12 input-group form-group">
                         <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Validity</label>
-                        <input type="Date" class="form-control" id="validity" name='discValidity' placeholder="Val">
+                        <input type="Date" class="form-control" id="validity" name='discValidity' placeholder="Val" required>
                     </div>
 
                     <div class="col-md-12 col-lg-12 col-12 input-group form-group">
